started css layout with animation on hero image

--- a/index.html
+++ b/index.html
@@ -4,10 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Love Running</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <script src="script.js"></script>
-    Hello
+    <header>
+      <a href="index.html">
+        <h2 id="logo">Love Running</h2>
+        <nav>
+          <ul id="menu">
+            <li>
+              <a href="#">Sign Up</a>
+            </li>
+            <li>
+              <a href="#">Gallery</a>
+            </li>
+            <li>
+              <a class="active" href="index.html">Home</a>
+            </li>
+          </ul>
+        </nav>
+      </a>
+    </header>
+    <section id="hero-outer">
+      <div id="hero-image"></div>
+    </section>
+
+    <section>Reasons for running</section>
+
+    <section>running locations, distances and times in here</section>
+
+    <footer>socal links in here</footer>
   </body>
 </html>
